-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: 5.0.6, 6.0.0, 7.0.0, 8.0.0
-
Component/s: None
-
None
-
Catalog and Routing
-
Fully Compatible
-
ALL
-
v8.0, v7.0, v6.0, v5.0
-
CAR Team 2024-12-23, CAR Team 2025-01-06, CAR Team 2025-01-20
-
0
-
3
-
None
-
None
-
None
-
None
-
None
-
None
-
None
When a router is aware of a stale version of a collection (which is not a timeseries), and the collection has now been re-created into a timeseries, the shard processing the request may bypass the shard version protocol. As a result, the shard might attempt to read from the old version of the collection rather than from the system.buckets collection.
Consider the following scenario:
- Create a database with the db primary shard being shard0.
- Create a sharded collection with chunks only in shard1.
- Make both RouterA and RouterB acknowledge in their routing information that the collection is located in shard1.
- Recreate the same sharded collection as a timeseries under RouterA, with chunks only in shard1.
- Insert some data into the timeseries collection using RouterA.
- RouterB attempts to read from the collection using stale routing information (from the previous incarnation when the collection was not a timeseries). As a result, the shard ignores the shard version protocol and fails to read the documents that were previously inserted.
This scenario illustrates how a router can lead to missed reads in a timeseries collection.
- is related to
-
SERVER-103226 Fix bulk_write.cpp set up of OperationShardingState when translating timeseries view to buckets nss
-
- Closed
-
-
SERVER-103170 Add ShardRole assertions to check that on operations originating from routers, all collection acquisitions declare a placement version
-
- Closed
-
- related to
-
SERVER-80719 Review timeseries name disambiguation in sharded clusters
-
- Closed
-
-
SERVER-117124 Remove shard version protocol protection for timeseries translation
-
- Backlog
-
-
SERVER-117123 Always install shard version protocol protection for timeseries translation
-
- Closed
-