SERVER-98386 Enter into the shard role for the invocation and buckets namespace if the buckets collection exists (#31137)

GitOrigin-RevId: 795186e00fb7ecdc669cd2c04a6a5833a8ec2eb8